# spf-check

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  spf-check.http  test-service.js
.claude/skills/audit/: SKILL.md
.claude/skills/review/: SKILL.md
.github/: dependabot.yml
.github/workflows/: linting.yml  publish.yml  tests.yml  update-dockerhub-readme.yml
crates/spf_checker/: Cargo.toml
crates/spf_checker/src/: lib.rs
src/: main.rs  spf_checker.rs  ui.html
src/html/: ui.html
