[package]
name = "spf-check"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1"
axum = "0.8.3"
chrono = "0.4.40"
# TODO: Use original crate when bugfix is released
decon-spf = { git = "https://github.com/coreequip/rust-decon-spf" }
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
trust-dns-resolver = { version = "0.23.2", features = ["tokio-runtime"] }

[profile.release]
lto = true
codegen-units = 1
